# gandalf

./: .gitignore  .travis.yml  Makefile.am  README  configure.ac  gandalf.pc.in
cli/: Makefile.am  gandapi.c  gandapi.h  gandqry-clo.ggo  gandqry.c  gandqry.yuck
cli/matlab/: Makefile.am  gand_close.c  gand_close.m  gand_get_series.c  gand_get_series.m  gand_handle.h  gand_open.c  gand_open.m  intern.c
info/: API.txt
lib/: Makefile.am  epoll-helpers.h  gand_msg-parser.y  gand_msg-private.h  gand_msg-scanner.l  gand_msg-select.gperf  gand_msg.c  gandalf-private.h  gandalf.h  libgandalf.pc.in  nifty.h
m4/: sxe-compiler.m4  sxe-dbms.m4  sxe-events.m4  sxe-matlab.m4  sxe-onion.m4
src/: Makefile.am  clidalf.c  clidalf.yuck  darray.c  darray.h  fileutils.h  fops.c  fops.h  gand-cfg.c  gand-cfg.h  gand-dict-redland.c  gand-dict-tokyo.c  gand-dict-virt.c  gand-dict.c  gand-dict.h  gand-endpoints-gp.erf  gand-outfmts-gp.erf  gandalf.c  gandalf.ggo  gandalf.pc.in  gandalfd-clo.ggo  gandalfd-onion.c  gandalfd.c  gandalfd.yuck  gandaux.c  gandaux.ggo  gandaux.yuck  httpd-verb-gp.erf  httpd.c  httpd.h  logger.c  logger.h  lua-config.h  nifty.h  slut-trie-glue.h  slut.c  slut.h  tail.c  tail.h  trie.c  (+5 more)
srv/: Makefile.am  con6ity.c  con6ity.h  configger.c  configger.h  darray.c  dso-gandalf.c  fileutils.h  gand_msg-parser.y  gand_msg-scanner.l  gand_msg.c  gandalfd-clo.ggo  gandalfd.c  lua-config.c  lua-config.h  slut-trie-glue-types.h  slut-trie-glue.h  slut.c  slut.h  triedefs.h
www/: 404.html  Makefile.am  index.html
